システムのタイムゾーンを設定する機能を追加した refs #1007

--- a/install.yml
+++ b/install.yml
@@ -13,6 +13,7 @@
 
   roles:
     - role: robertdebock.selinux
+    - role: timezone
     - role: httpd
     - role: geerlingguy.ruby
     - role: postgresql
