--- a/vars/default.yml
+++ b/vars/default.yml
@@ -1,6 +1,12 @@
 # Redmine intall vars
 
 # ----------------------------------------------------------------------
+# システムのタイムゾーン
+#----------------------------------------------------
+system_timezone: Asia/Tokyo
+
+
+# ----------------------------------------------------------------------
 # データベース情報 (変更推奨)
 #----------------------------------------------------
 db_host: localhost
