--- a/roles/passenger/tasks/main.yml
+++ b/roles/passenger/tasks/main.yml
@@ -1,3 +1,4 @@
+---
 - name: Install prerequisites
   yum:
     name:
@@ -9,6 +10,12 @@
       - zlib-devel
     state: present
 
+- name: Check if Passenger is installed
+  command: passenger -v
+  register: PASSENGER_INSTALLED
+  changed_when: False
+  ignore_errors: True
+
 - name: Install Passenger
   gem:
     name: passenger
@@ -16,40 +23,49 @@
     user_install: no
   environment:
     PATH: "/usr/local/bin:{{ ansible_env.PATH }}"
+  when: PASSENGER_INSTALLED is failed
 
 - name: Copy the file to be used for swap
   command: dd if=/dev/zero of=/swap bs=1M count=1024
+  when: PASSENGER_INSTALLED is failed
 
 - name: Format the file for swap
   command: mkswap /swap
+  when: PASSENGER_INSTALLED is failed
 
 - name: Add the file to the system as a swap file
   command: swapon /swap
+  when: PASSENGER_INSTALLED is failed
 
 - name: Run the Passenger Apache module installer
   command: passenger-install-apache2-module --auto --languages ruby
   environment:
     PATH: "/usr/local/bin:{{ ansible_env.PATH }}"
+  when: PASSENGER_INSTALLED is failed
 
 - name: Register results of showing configuration snippet command to variable
   command: passenger-install-apache2-module --snippet
   environment:
     PATH: "/usr/local/bin:{{ ansible_env.PATH }}"
   register: PASSENGER_SNIPPET_VARS
+  when: PASSENGER_INSTALLED is failed
 
 - name: Create redmine.conf
   template:
     src: redmine.conf
     dest: "/etc/httpd/conf.d/{{ httpd_conf_confd }}"
+  when: PASSENGER_INSTALLED is failed
 
 - name: Stop httpd
   service:
     name: httpd
     state: stopped
     enabled: yes
+  when: PASSENGER_INSTALLED is failed
 
 - name: Start httpd
   service:
     name: httpd
     state: started
     enabled: yes
+  when: PASSENGER_INSTALLED is failed
