--- a/roles/redmine/install/templates/configuration.yml
+++ b/roles/redmine/install/templates/configuration.yml
@@ -1,3 +1,4 @@
+---
 production:
   email_delivery:
     delivery_method: :smtp
@@ -5,5 +6,4 @@ production:
       address: "localhost"
       port: 25
       domain: "{{ ansible_fqdn }}"
-
-  rmagick_font_path: {{ redmine_font_path }}
+  rmagick_font_path: "{{ redmine_font_path }}"
