--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@
 jobs:
   build:
     docker:
-      - image: tomonorimatsumura/ansible-boto3:python3.8-latest
+      - image: tomonorimatsumura/molecule:latest
 
     steps:
       - checkout
@@ -10,7 +10,6 @@ jobs:
           name: Create galaxy dependencies file in 'molecule/default/'
           command: |
             cp roles/requirements.yml molecule/default/requirements.yml
-
       - run:
           name: Test with molecule
           command: |
@@ -19,7 +18,9 @@ jobs:
             EC2_REGION: ap-northeast-1
             PY_COLORS: '1'
             ANSIBLE_FORCE_COLOR: '1'
-
+      - run:
+          name: Show Molecule version
+          command: molecule --version
 version: 2
 test-checkout:
   jobs:
