--- a/molecule/default/create.yml
+++ b/molecule/default/create.yml
@@ -8,7 +8,7 @@
     ssh_user: centos
     ssh_port: 22
 
-    security_group_name: molecule
+    security_group_name: molecule_redmine_install
     security_group_description: Security group for testing Molecule
     security_group_rules:
       - proto: tcp
@@ -25,7 +25,7 @@
         to_port: 0
         cidr_ip: '0.0.0.0/0'
 
-    keypair_name: molecule_key
+    keypair_name: redmine_install_molecule_key
     keypair_path: "{{ lookup('env', 'MOLECULE_EPHEMERAL_DIRECTORY') }}/ssh_key"
   tasks:
     - name: Create security group
