Passengerをインストールする処理でSWAP領域を確保するか判定する変数を導入した refs #1317

--- a/molecule/vm/molecule.yml
+++ b/molecule/vm/molecule.yml
@@ -10,6 +10,7 @@ platforms:
     vpc_subnet_id: subnet-022a704b3061b8b39
 provisioner:
   name: ansible
+  log: True
   playbooks:
     converge: ../../install.yml
 verifier:
