--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,15 +13,20 @@ jobs:
             cd aws-ami_centos7
             AMI_ID=$(git branch -a | grep ami- | sed 's/^[ \t]*remotes\/origin\///g')
             cd ..
-            sed -i -e "s/'{{ AMI_ID }}'/${AMI_ID}/" molecule/default/molecule.yml
+            sed -i -e "s/'{{ AMI_ID }}'/${AMI_ID}/" molecule/vm/molecule.yml
       - run:
-          name: Create galaxy dependencies file in 'molecule/default/'
+          name: Create galaxy dependencies file in 'molecule/vm/'
           command: |
-            cp roles/requirements.yml molecule/default/requirements.yml
+            cp roles/requirements.yml molecule/vm/requirements.yml
+      - run:
+          name: Configure install.yml
+          command: |
+            sed -i '/vars:/a passenger_swap: true' install.yml
+            sed -i 's/passenger_swap: true/    passenger_swap: true/' install.yml
       - run:
           name: Test with molecule
           command: |
-            molecule test
+            molecule test --scenario-name vm
           environment:
             EC2_REGION: ap-northeast-1
             PY_COLORS: '1'
