--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -8,11 +8,9 @@ jobs:
     strategy:
       matrix:
         distro:
-          - centos7
+          - centos7jp
         python-version:
           - 3.6
-          - 3.7
-          - 3.8
 
     steps:
       - uses: actions/checkout@v1
@@ -22,20 +20,11 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Cache pip
-        uses: actions/cache@v2
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('molecule/requirements.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
-            ${{ runner.os }}-
-
       - name: Install dependencies
         run: pip install -r molecule/requirements.txt
 
-      - name: Create galaxy dependencies file in 'molecule/default/'
-        run: cp roles/requirements.yml molecule/default/requirements.yml
+      - name: Create galaxy dependencies file in 'molecule/docker/'
+        run: cp roles/requirements.yml molecule/docker/requirements.yml
 
       - name: Test with molecule
         env:
@@ -43,4 +32,4 @@ jobs:
           ANSIBLE_FORCE_COLOR: '1'
           MOLECULE_DISTRO: ${{ matrix.distro }}
         run: |
-          molecule test
+          molecule test --scenario-name docker
