--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,12 +2,12 @@
 jobs:
   build:
     docker:
-      - image: tomonorimatsumura/molecule:latest
+      - image: ghcr.io/docker-hub-tm/circleci-executors_molecule/molecule:latest
 
     steps:
       - checkout
       - run:
-          name: Set latest AMI image id to molecule.yml
+          name: Overwrite latest AMI image id in 'molecule/vm/molecule.yml'
           command: |
             git clone https://github.com/packer-tm/aws-ami_centos7.git
             cd aws-ami_centos7
@@ -31,6 +31,9 @@ jobs:
             EC2_REGION: ap-northeast-1
             PY_COLORS: '1'
             ANSIBLE_FORCE_COLOR: '1'
+      - run:
+          name: Show Ansible version
+          command: ansible --version
       - run:
           name: Show Molecule version
           command: molecule --version
