CircleCIでAWS Credentialsを渡す処理を環境変数からContextへ変更した refs #1421

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,10 @@ jobs:
       - run:
           name: Show Molecule version
           command: molecule --version
-version: 2
-test-checkout:
-  jobs:
-    - build
+
+version: 2.1
+workflows:
+  redmine-install:
+    jobs:
+      - build:
+          context: aws-credentials
