--- a/molecule/docker/molecule.yml
+++ b/molecule/docker/molecule.yml
@@ -5,7 +5,7 @@ driver:
   name: docker
 platforms:
   - name: instance
-    image: tomonorimatsumura/ansible-test:${MOLECULE_DISTRO:-centos7}-latest
+    image: ghcr.io/docker-hub-tm/ansible-test/${MOLECULE_DISTRO:-centos7}:latest
     pre_build_image: True
     command: /sbin/init
     privileged: True
