「circleci/config.yml」で処理されている変数「passenger_swap」の設定をmolecule.ymlから行うように変更した refs #1451

--- a/molecule/vm/molecule.yml
+++ b/molecule/vm/molecule.yml
@@ -10,7 +10,9 @@ platforms:
     vpc_subnet_id: subnet-022a704b3061b8b39
 provisioner:
   name: ansible
-  log: True
+  connection_options:
+    passenger_swap: true
+  log: true
   playbooks:
     converge: ../../install.yml
 verifier:
