--- a/molecule/vm/molecule.yml
+++ b/molecule/vm/molecule.yml
@@ -4,17 +4,19 @@ dependency:
 driver:
   name: ec2
 platforms:
-  - name: redmine
+  - name: ${PLATFORM_NAME}
     image: ${AMI_ID}
     instance_type: t2.micro
     vpc_subnet_id: ${VPC_SUBNET_ID}
+    keypair_name: ${KEYPAIR_NAME}
+    security_group_name: ${SECURITY_GROUP_NAME}
 provisioner:
   name: ansible
   connection_options:
     passenger_swap: true
-  log: true
   playbooks:
     converge: ../../install.yml
+  log: true
 verifier:
   name: ansible
 scenario:
