--- a/molecule/docker/molecule.yml
+++ b/molecule/docker/molecule.yml
@@ -11,6 +11,9 @@ platforms:
     privileged: true
 provisioner:
   name: ansible
+  config_options:
+    defaults:
+      callback_whitelist: ansible.posix.profile_tasks
   playbooks:
     converge: ../../install.yml
   log: true
