--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,5 +59,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: yamllint
+
+      - name: Execute yamllint
         run: yamllint *
+
+      - name: Show yamllint version
+        run: yamllint --version
