--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,14 +39,17 @@ jobs:
       - name: Create galaxy dependencies file in 'molecule/docker/'
         run: cp roles/requirements.yml molecule/docker/requirements.yml
 
+
       - name: Test with molecule
         run: |
           molecule test --scenario-name docker
         env:
-          TZ: 'Asia/Tokyo'
-          PY_COLORS: '1'
           ANSIBLE_FORCE_COLOR: '1'
           MOLECULE_DISTRO: ${{ matrix.distro }}
+          PROFILE_TASKS_SORT_ORDER: 'none'
+          PROFILE_TASKS_TASK_OUTPUT_LIMIT: '200'
+          PY_COLORS: '1'
+          TZ: 'Asia/Tokyo'
 
   trailing-whitespace:
     name: Find Trailing Whitespace
