モジュール名の表記をFQCNへ変更した refs #1632

--- a/roles/httpd/tasks/main.yml
+++ b/roles/httpd/tasks/main.yml
@@ -1,11 +1,11 @@
 ---
 - name: Install httpd with yum
-  yum:
+  ansible.builtin.yum:
     name: httpd
     state: present
 
 - name: Start httpd
-  service:
+  ansible.builtin.service:
     name: httpd
     state: started
     enabled: yes
