CircleCIの処理でAMI IDを取得する処理を修正した refs #1680

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
           command: |
             AMI_ID=$(aws ec2 describe-images \
             --owners $AMI_OWNER_ID \
-            --filters "Name=name,Values=centos*" \
+            --filters "Name=name,Values=centos7*" \
             --query 'Images[*][CreationDate, ImageId, Name]' \
             --output text | sort -r | awk 'NR==1 {print $2}')
 
