GitHub ActionsのMoleculeの処理でAnsibleのバージョンを表示する処理を追加した refs #1726

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,7 +39,6 @@ jobs:
       - name: Create galaxy dependencies file in 'molecule/docker/'
         run: cp roles/requirements.yml molecule/docker/requirements.yml
 
-
       - name: Test with molecule
         run: |
           molecule test --scenario-name docker
@@ -50,6 +49,14 @@ jobs:
           PROFILE_TASKS_TASK_OUTPUT_LIMIT: '200'
           PY_COLORS: '1'
           TZ: 'Asia/Tokyo'
+
+      - name: Show Ansible version
+        run: |
+          pip list | grep ansible \
+          | GREP_COLORS='mt=01;34' egrep --color=always '[[:digit:]]' \
+          | GREP_COLORS='mt=01;34' egrep --color=always '\.' \
+          | GREP_COLORS='mt=01;33' egrep --color=always 'ansible.* '
+          ansible --version
 
   trailing-whitespace:
     name: Find Trailing Whitespace
