PlaybookをCentOS8へ対応させた refs #1658

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,6 +57,7 @@ jobs:
       matrix:
         distro:
           - centos7jp
+          - centos8
         python-version:
           - 3.8
           - 3.9
