--- a/roles/redmine/create-pg-account-and-database/tasks/main.yml
+++ b/roles/redmine/create-pg-account-and-database/tasks/main.yml
@@ -1,4 +1,28 @@
 ---
+- name: Install requirements(1)
+  ansible.builtin.package:
+    name: "{{ item }}"
+    state: present
+  loop:
+    - gcc
+    - patch
+
+- name: Install Python(CentOS8)
+  ansible.builtin.package:
+    name: python3-devel
+    state: present
+  when:
+    - ansible_distribution == "CentOS"
+    - ansible_distribution_major_version == "8"
+
+- name: Install psycopg2(CentOS8)
+  ansible.builtin.pip:
+    name: psycopg2
+    state: present
+  when:
+    - ansible_distribution == "CentOS"
+    - ansible_distribution_major_version == "8"
+
 - name: Delete working directory
   ansible.builtin.file:
     path: '{{ work_dir }}'
@@ -10,14 +34,27 @@
     state: directory
     mode: 0755
 
-- name: Create a new PostgreSQL database cluster
+- name: Create a new PostgreSQL database cluster(CentOS7)
   ansible.builtin.command:
     postgresql-setup initdb
   changed_when: False
   ignore_errors: True
   environment:
-    PATH:
-      "{{ ansible_env.PATH }} "
+    PATH: "{{ ansible_env.PATH }} "
+  when:
+    - ansible_distribution == "CentOS"
+    - ansible_distribution_major_version == "7"
+
+- name: Create a new PostgreSQL database cluster(CentOS8)
+  ansible.builtin.shell:
+    PGSETUP_INITDB_OPTIONS="--encoding=UTF-8 --no-locale" postgresql-setup --initdb
+  changed_when: False
+  ignore_errors: True
+  environment:
+    PATH: "{{ ansible_env.PATH }} "
+  when:
+    - ansible_distribution == "CentOS"
+    - ansible_distribution_major_version == "8"
 
 - name: Creare patch for adding host-based authentication into pg_hba.conf
   ansible.builtin.template:
