--- a/molecule/docker/molecule.yml
+++ b/molecule/docker/molecule.yml
@@ -5,7 +5,7 @@ driver:
   name: docker
 platforms:
   - name: instance
-    image: ghcr.io/docker-hub-tm/ansible-test/${MOLECULE_DISTRO:-centos7}:latest
+    image: ghcr.io/docker-hub-tm/ansible-test/${MOLECULE_DISTRO:-centos8}:latest
     pre_build_image: true
     command: /sbin/init
     privileged: true
@@ -24,4 +24,5 @@ scenario:
     - dependency
     - syntax
     - create
+    - prepare
     - converge
